--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sb-tres-materials-plugin",
+  "name": "sb-tres-material-plugin",
   "version": "0.1.0",
   "type": "module",
   "author": "Alvaro Saburido <hola@alvarosaburido.dev> (https://github.com/alvarosabu/)",
@@ -11,20 +11,22 @@
     "deploy": "npm run build && npx @storyblok/field-plugin-cli@alpha deploy"
   },
   "dependencies": {
-    "@storyblok/design-system": "^3.11.2",
-    "@storyblok/field-plugin": "0.0.1-beta.1",
-    "@tresjs/cientos": "^2.1.2",
-    "@tresjs/core": "^2.1.2",
-    "three": "^0.152.2",
-    "unocss": "^0.52.5",
+    "@storyblok/design-system": "^3.15.1",
+    "@storyblok/field-plugin": "0.0.1-beta.4",
+    "@tresjs/cientos": "^3.1.0",
+    "@tresjs/core": "^3.1.0",
+    "three": "^0.155.0",
+    "unocss": "^0.54.0",
     "vue": "^3.2.47",
-    "vue-color-kit": "^1.0.5"
+    "vue-color-kit": "^1.0.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.2",
-    "vite-plugin-css-injected-by-js": "3.1.0",
-    "vue-tsc": "^1.2.0"
+    "@tweakpane/plugin-essentials": "^0.2.0",
+    "@vitejs/plugin-vue": "^4.3.3",
+    "tweakpane": "^4.0.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vite-plugin-css-injected-by-js": "3.3.0",
+    "vue-tsc": "^1.8.8"
   }
 }
